#4810 prevent a large part of the flickering when typing into the Input Bar (now it does not scroll to the beginning, but it still jumps for one character length)
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@39568 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/geogebra/resources/css/mathquillggb.css
+++ b/web/src/geogebra/resources/css/mathquillggb.css
@@ -472,6 +472,22 @@
   -webkit-user-select: text;
   -moz-user-select: text;
   user-select: text;
-  position: absolute;
+
+  /* in order to prevent flickering when typing here: */
+  /* position changed from absolute to fixed! */
+  /* this should be invisible! */
+  position: fixed;
+  /* maybe z-index is not necessary, but */
+  z-index: -1000;
+  /* clip is deprecated! */
   clip: rect(1em 1em 1em 1em);
+
+  /* also, to exclude every possible wrongs coming */
+  /* from initial coordinates of fixed positioning: */
+  /* although the following lines may be redundant: */
+  top:0px;
+  left: 0px;
+  /* why not? */
+  width: 1px;
+  height: 1px;
 }
